# fastapi-blog

./: .env  main.py  pyproject.toml
db/: database.py
routes/: auth.py  blog.py
schemas/: auth_schema.py  blog_schema.py
services/: auth_svc.py  blog_svc.py
templates/: index.html  modify_blog.html  new_blog.html  show_blog.html
templates/layout/: navbar.html
utils/: common.py  exc_handler.py  middleware.py  util.py
