[project]
name = "fastapi-blog"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiofiles==24.1.0",
    "aiomysql==0.2.0",
    "fastapi>=0.135.3",
    "greenlet>=3.4.0",
    "jinja2>=3.1.6",
    "mysql-connector-python==9.0.0",
    "pymysql==1.1.1",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.22",
    "sqlalchemy==2.0.32",
    "uvicorn>=0.43.0",
]
